Semantik 1.2.2
--------------
* Fix stale connections when unconnecting multiple references

Semantik 1.2.1
--------------
* Fix duplicate reference values
* Fix double prompts for overwriting files
* Fix map variables visibility when opening maps
* Fix document generator dialog's tab navigation
* Fix boundary objects' text alignment (diagrams)
* Fix pipe objects' resizing (diagrams)
* Fix component objects' margin sizes
* Enable newlines on most diagram objects #89
* Add global settings for commands to execute after a template is called

Semantik 1.2.0
--------------
* Add support for references (Kdissert) #91
* Add support for newlines in table attachments #89
* Configure arrow colors on the main map
* Add a new Entity shape for data modeling (diagrams)
* Fix missing crossing lines when printing or exporting diagrams

Semantik 1.1.0
--------------
* Improve the looks of diagram crossing lines

Semantik 1.0.9
--------------
* Display picture and diagram thumbnails on the main map
* Add a touchpad mode for laptop users

Semantik 1.0.8
--------------
* Add new formatting actions to the Rich Text editor: text color, hyperlink, list, clear formatting
* Position diagram boundary captions to top or bottom
* Improve the odt template styles

Semantik 1.0.7
--------------
* Export rich text in html/s5 document generators
* Add new styles for the odt template
* Add text alignment options to diagram elements

Semantik 1.0.6
--------------
* Improve the document export from the command-line
* Fix some annoying with the base directory changing to /tmp
* Persist font settings in documents
* Update the French translation data
* Export png files in html and latex documents
* Remove the Beamer files: most LaTeX distributions provide them nowadays

Semantik 1.0.5
--------------
* Highlight code snippets in beamer presentations/pdflatex using Minted
* Fix drawing artifacts when switching diagrams
* Fix the inactive custom color buttons in semantik #88